<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchUp"
    android:background="@drawable/cool_background">


    <TextView
        android:id="@+id/tv_Prediction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/ScorePred"
        android:textSize="30dp"
        android:textIsSelectable="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ScoreUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/ScoreUser"
        android:textSize="70dp"
        android:layout_marginEnd="0dp"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toStartOf="@+id/tv_ScoreOpponent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Prediction" />

    <TextView
        android:id="@+id/tv_ScoreOpponent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="80dp"
        android:text="@string/ScoreOpponent"
        android:textIsSelectable="false"
        android:textSize="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Prediction" />

    <TextView
        android:id="@+id/tv_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/bar"
        android:textIsSelectable="false"
        android:textSize="70dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_ScoreOpponent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/tv_ScoreUser"
        app:layout_constraintTop_toBottomOf="@+id/tv_Prediction" />

    <TextView
        android:id="@+id/tv_Outcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="Outcome"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bar" />

    <Button
        android:id="@+id/btn_PredictAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Predict Another Match"
        app:backgroundTint="@color/material_on_background_emphasis_medium"
        app:layout_constraintBottom_toTopOf="@+id/btn_MatchHistory"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Outcome"
        app:layout_constraintVertical_bias="0.903" />

    <Button
        android:id="@+id/btn_MatchHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Check Match History"
        app:backgroundTint="@color/material_on_background_emphasis_medium"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Outcome"
        app:layout_constraintVertical_bias="0.852" />

    <EditText
        android:id="@+id/et_YourTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:hint="@string/NameT"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Outcome" />

    <EditText
        android:id="@+id/et_OpponentTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:hint="@string/OpponentT"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_YourTeamName" />
</androidx.constraintlayout.widget.ConstraintLayout>